Refactor in some class to improve tests and features

--- a/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_cadastrar.html
@@ -25,8 +25,8 @@
       
       
         <div class="input-field col m6 s6">
-        	<input id="email" type="text" name="email"/>
-       	    <label for="email">Email</label>
+        	<input id="email" type="text" th:field="${organizador.email}"/>
+       	    <label for="email">Email do Organizador</label>
       	</div>
      
       <div class="input-field col m12 s6">
