Corrigindo listagem de possiveis responsaveis pela seção

--- a/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
+++ b/aplicacao/contest/src/main/resources/templates/secao/indexSecao.html
@@ -33,6 +33,7 @@
                 <p th:text="'Data: '+${secao.dataSecao}"></p>
                 <p th:text="'Hora: '+${secao.horario}"></p>
                 <p th:text="'Local: '+${secao.local}"></p>
+                <p th:text="'Responsável: '+${secao.responsavel.nome}"></p>
             </div>
            
             <div class="card-action">
