Pausa para corrigir erros do codacy

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -42,7 +42,7 @@
 						<form id="formAdicionarOrganizador" th:action="@{/eventoOrganizador/convidar}" action="#" method="POST" class="col s12">
 							<div class="row modal-form-row">
 								<div class="input-field col s12">
-									<input id="email_org" type="email" name="email" class="validate"
+									<input id="email_org" type="text" name="email" class="validate"
 										required="required" /> <label for="email_org">E-mail
 										Organizador</label>
 								</div>
