--- a/aplicacao/contest/src/main/resources/templates/dashboard.html
+++ b/aplicacao/contest/src/main/resources/templates/dashboard.html
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col s12 m6">
 				<div class="card white">
-					<div class="card-content">
+					<div class="card-content" th:switch="${not #lists.isEmpty(trabalhosQueReviso)}">
 						<h4>Como Revisor</h4>
 						<div th:if="${#lists.isEmpty(trabalhosQueReviso)}">
 							<b>Você não está revisando nenhum trabalho.</b>
@@ -48,21 +48,21 @@
 						<div th:if="${#lists.isEmpty(eventosQueOrganizo)}">
 							<b>Você não está organizando nenhum evento ativo.</b>
 						</div>
-						<div th:if="${not #lists.isEmpty(eventosQueOrganizo)}">
+						<div th:if="${not #lists.isEmpty(eventosQueOrganizo)}" >
 							<ul>
-							<li><a th:href="@{|/evento/editar/${eventosQueOrganizo[0].evento.id}|}"
+							<li><a th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[0].evento.id}|}"
 									th:text="${eventosQueOrganizo[0].evento.nome}"></a></li>
 								<li><a th:if="${eventosQueOrganizo.size()} > 1"
-									th:href="@{|/evento/editar/${eventosQueOrganizo[1].evento.id}|}"
+									th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[1].evento.id}|}"
 									th:text="${eventosQueOrganizo[1].evento.nome}"></a></li>
 								<li><a th:if="${eventosQueOrganizo.size()} > 2"
-									th:href="@{|/evento/editar/${eventosQueOrganizo[2].evento.id}|}"
+									th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[2].evento.id}|}"
 									th:text="${eventosQueOrganizo[2].evento.nome}"></a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="card-action">
-						<a th:href="@{/eventoOrganizador/}"
+						<a th:href="@{/eventoOrganizador}"
 							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
 							mais</a>
 					</div>
@@ -74,26 +74,18 @@
 			<div class="card white">
 				<div class="card-content">
 					<h4>Como Autor</h4>
-					<div th:if="${#lists.isEmpty(trabalhosMinhaAutoria)}">
+					<div th:if="${#lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
 						<b>Você não está participando de nenhum evento ativo.</b>
 					</div>
 					<div class="card white" th:if="${not #lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
 						<div class="card-content" >
-							<h5>Participando</h5>
-								<div class=""
-									th:each="participacaoEvento : ${eventoTrabalhosMinhaAutoria}">
+									<div th:each="participacaoEvento : ${eventoTrabalhosMinhaAutoria}">
 									<div class="card horizontal">
 										<div class="card-stacked">
 											<div
 												th:include="fragments/evento_timeline::evento-timeline(evento=${participacaoEvento.evento})"></div>
 											<div class="card-action">
-												<a th:if="${participacaoEvento.evento.isPeriodoInicial()}"
-													th:attr="href='#modal' + ${participacaoEvento.evento.id}"
-													class="btn white-text waves-effect waves-light confirmar modal-trigger">Participar</a>
-												<a
-													th:unless="${participacaoEvento.evento.isPeriodoInicial()}"
-													class="btn disabled white-text grey">Período de
-													inscrição encerrado</a>
+												<a class="purple-text">Participando</a>
 											</div>
 										</div>
 									</div>
@@ -119,53 +111,16 @@
 									</div>
 								</div>
 							</div>
-						</div>
-					</div>
-
-					<div class="card white">
-						<div class="card-content">
-							<h5>Não Participando</h5>
-							<div class="" th:if="${!#lists.isEmpty(eventosParaParticipar)}">
-								<div class="" th:each="evento : ${eventosParaParticipar}">
-									<div class="card horizontal">
-										<div class="card-stacked">
-											<div
-												th:include="fragments/evento_timeline::evento-timeline(evento=${evento})"></div>
-											<div class="card-action">
-												<a th:if="${evento.isPeriodoInicial()}"
-													th:attr="href='#modal' + ${evento.id}"
-													class="btn white-text waves-effect waves-light confirmar modal-trigger">Participar</a>
-												<a th:unless="${evento.isPeriodoInicial()}"
-													class="btn disabled white-text grey">Período de
-													inscrição encerrado</a>
-											</div>
-										</div>
-									</div>
-
-									<div th:attr="id='modal' + ${evento.id}" class="modal">
-										<div class="modal-content">
-											<h4>Participar do Evento</h4>
-											<h5 th:text="${evento.nome}"></h5>
-											<p>Tem certeza que quer participar deste evento?</p>
-										</div>
-										<form th:action="@{/autor/participarEvento}" method="post">
-
-											<div class="modal-footer">
-												<input type="hidden" name="idEvento" th:value="${evento.id}" />
-												<button type="submit"
-													class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
-												<a href="#"
-													class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
-											</div>
-										</form>
-									</div>
-								</div>
 							</div>
 						</div>
+						<div class="card-action">
+						<a th:href="@{/autor}"
+							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+							mais</a>
+					</div>
 					</div>
 				</div>
 			</div>
-		</div>
 	<div th:include="fragments/footer :: footer"></div>
 	<script type="text/javascript" th:src="@{/js/timeline.main.js}"></script>
 	<script type="text/javascript"></script>
