--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -10,11 +10,10 @@
 				<a th:href="@{/}"><img th:src="@{/img/logotipo_white.png}"
 					alt="Contest" width="200px" /></a>
 				<ul class="white-text right hide-on-med-and-down">
-					<li><form th:action="@{/dashboard}" method="POST"
-							id="dashboard">
-							<a th:href="@{/dashboard}">Ir para Dashboard</a>
-						</form></li>
-					<!-- 					<li><a href="#" sec:authentication="username"></a></li> -->
+					<li>
+						<div sec:authorize = "hasRole('USER')"> <a th:href="@{/dashboard}"> Ir para Dashboard </a> </div>
+						<div sec:authorize = "hasRole('ADMIN')"> <a th:href="@{/evento/ativos}"> Ir para Início </a> </div>
+					</li>
 					<li><a href="#"
 						th:text="${#authentication.getPrincipal().getNome()}"></a></li>
 
