botoes finalizados de adicionar revisor e organizador finalizados, card que lista organizador e revisor finalizdo, pessoa pode ser organizador e revisor no mesmo evento.

--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -29,7 +29,7 @@
 
 
 			<!-- Modal Trigger -->
-			<div th:if="${#strings.equals(evento.visibilidade.getVisibilidade(),'Privado')}">
+			
 			<button class="waves-effect waves-light btn modal-trigger  left"
 				data-target="modal1" style="left: 4px;">Adicionar
 				Organizador</button>
@@ -103,14 +103,13 @@
 				</div>
 				
 			</div>
-			</div>
 
 			<div class="row">
 				<div class="col s12 m6">
 					<div class="card darken-1">
 						<div class="card-content white-text">
 							<span class="card-title teal-text text-lighten-2">Organizadores</span>
-							<p class="black-text text-darken-2">Lista de Organizadores</p>
+							<p th:each="pessoaOrganizador : ${evento.getOrganizadores()}" class="black-text text-darken-2" th:text="${pessoaOrganizador.getNome()}"></p>
 						</div>
 					</div>
 				</div>
@@ -119,7 +118,8 @@
 					<div class="card">
 						<div class="card-content white-text">
 							<span class="card-title teal-text text-lighten-2">Revisores</span>
-							<p class="black-text text-darken-2">Lista de Revisores</p>
+							<p th:each="pessoaRevisor : ${evento.getRevisores()}" class="black-text text-darken-2" th:text="${pessoaRevisor.getNome()}"></p>
+							<p th:unless="${!#lists.isEmpty(evento.getRevisores())}" class="black-text text-darken-2" >Não há revisores</p>
 						</div>
 					</div>
 				</div>
