--- a/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/organizador_menu_navegacao.html
@@ -11,8 +11,10 @@
 	       	<a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
 
 	       	<a th:href="@{/secao/paginaSecao}">Visualizar Seções</a>
-
-	       	<a th:if= "${evento != null} ? ${#strings.equals(evento.visibilidade.getVisibilidade(),'Privado')} and ${#strings.equals(evento.estado,'ATIVO')} and ${#arrays.contains(evento.getNomeOrganizadores(), #authentication.getPrincipal().getNome())} "   class="modal-trigger" href="#modalConvidarPessoas">Convidar Pessoas</a>
+			<!-- <a th:text="${#authentication.getPrincipal()}"></a> -->
+	       	<a th:if= "${evento != null} ? ${#strings.equals(evento.visibilidade.getVisibilidade(),'Privado')}
+	       	 and ${#strings.equals(evento.estado,'ATIVO')} and ${#arrays.contains(evento.getOrganizadores(), #authentication.getPrincipal())} " 
+	       	 class="modal-trigger" href="#modalConvidarPessoas">Convidar Pessoas</a>
 	       <!-- Dropdown Structure -->
 			<ul th:if="${evento}" id='dropdown1' class='dropdown-content'>
 				<li><a th:href="@{|/eventoOrganizador/gerarCertificadosOrganizador/${evento.id}|}">Dados da Organização</a></li>
