--- a/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_detalhes_evento.html
@@ -30,9 +30,7 @@
 
 			<!-- Modal Trigger -->
 			
-			<button class="waves-effect waves-light btn modal-trigger  left"
-				data-target="modal1" style="left: 4px;">Adicionar
-				Organizador</button>
+		  
 
 			<!-- Modal Structure -->
 			<div id="modal1" class="modal">
@@ -66,15 +64,12 @@
 					<button class="modal-action modal-close left btn waves-effect orange">Cancelar</button>
 				</div>
 			</div>
-
-			<!-- Modal Trigger -->
-			<button class="waves-effect waves-light btn modal-trigger rigth"
-				data-target="modal2" style="left: 510px;">Adicionar Revisor</button>
-
+				<!-- Modal Trigger -->
 
 			<!-- Modal Structure -->
 			<div id="modal2" class="modal">
 				<div class="modal-content">
+				
 					<h4>Adicionar Revisor</h4>
 
 					<div class="row">
@@ -82,8 +77,7 @@
 							<div class="row modal-form-row">
 								<div class="input-field col s12">
 									<input id="email_rev" name="email" type="text" class="validate"
-										required="required" /> <label for="email_rev">E-mail
-										Revisor</label>
+										required="required" /> <label for="email_rev">E-mail Revisor</label>
 								</div>
 								
 								<div class="input-field">
@@ -95,6 +89,7 @@
 								</div>	
 							</div>
 						</form>
+					
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -103,23 +98,33 @@
 				</div>
 				
 			</div>
-
+			<br/>
+			<br/>
+			<br/>			
 			<div class="row">
 				<div class="col s12 m6">
 					<div class="card darken-1">
-						<div class="card-content white-text">
-							<span class="card-title teal-text text-lighten-2">Organizadores</span>
-							<p th:each="pessoaOrganizador : ${evento.getOrganizadores()}" class="black-text text-darken-2" th:text="${pessoaOrganizador.getNome()}"></p>
+						<div class="card-content white-text">						 
+						<span class="card-title teal-text text-lighten-2">Organizadores:</span>												
+						<p th:each="pessoaOrganizador : ${evento.getOrganizadores()}" class="black-text text-darken-2" th:text="${pessoaOrganizador.getNome()}"></p>
+						<br/>
+						<button class="waves-effect waves-light btn modal-trigger  left" data-target="modal1" style="left:1px">Adicionar Organizador</button>
+						 <br/>
+						 <br/>						 
 						</div>
 					</div>
 				</div>
 
 				<div class="col s12 m6">
 					<div class="card">
-						<div class="card-content white-text">
-							<span class="card-title teal-text text-lighten-2">Revisores</span>
-							<p th:each="pessoaRevisor : ${evento.getRevisores()}" class="black-text text-darken-2" th:text="${pessoaRevisor.getNome()}"></p>
-							<p th:unless="${!#lists.isEmpty(evento.getRevisores())}" class="black-text text-darken-2" >Não há revisores</p>
+						<div class="card-content white-text">						
+						<span class="card-title teal-text text-lighten-2">Revisores:</span>
+						<p th:each="pessoaRevisor : ${evento.getRevisores()}" class="black-text text-darken-2" th:text="${pessoaRevisor.getNome()}"></p>
+						<p th:unless="${!#lists.isEmpty(evento.getRevisores())}" class="black-text text-darken-2" >Não há revisores</p>						
+						<br/>	
+						<button name="button" class="waves-effect waves-light btn modal-trigger left" data-target="modal2" style="right: 1px">Adicionar Revisor</button>				
+						<br/>
+						<br/>						
 						</div>
 					</div>
 				</div>
