--- a/aplicacao/contest/src/main/resources/templates/fragments/header.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/header.html
@@ -5,24 +5,27 @@
 	<div th:fragment="header">
 		<nav role="navigation" class="purple darken-4">
 			<div class="nav-wrapper container" sec:authorize="isAuthenticated()">
-
-
-				<a th:href="@{/}"><img th:src="@{/img/logotipo_white.png}"
-					alt="Contest" width="200px" /></a>
-				<ul class="white-text right hide-on-med-and-down">
-					<li>
-						<div sec:authorize = "hasRole('USER')"> <a th:href="@{/dashboard}"> Ir para Dashboard </a> </div>
-						<div sec:authorize = "hasRole('ADMIN')"> <a th:href="@{/evento/ativos}"> Ir para Início </a> </div>
-					</li>
-					<li><a href="#"
-						th:text="${#authentication.getPrincipal().getNome()}"></a></li>
-
-					<li><form th:action="@{/logout}" method="POST" id="logout">
-							<a
-								onclick="document.getElementById('logout').submit(); return false;">Sair</a>
-						</form></li>
-				</ul>
-
+							
+				<div >
+					<a sec:authorize = "hasRole('USER')" th:href="@{/dashboard}"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px" /></a>
+					<a sec:authorize = "hasRole('ADMIN')" th:href="@{/evento/ativos}"><img th:src="@{/img/logotipo_white.png}" alt="Contest" width="200px" /></a>
+					<ul class="white-text right hide-on-med-and-down">
+						<li>
+							<div sec:authorize = "hasRole('USER')"> <a th:href="@{/dashboard}"> Ir para Dashboard </a> </div>
+							<div sec:authorize = "hasRole('ADMIN')"> <a th:href="@{/evento/ativos}"> Ir para Início </a> </div>
+						</li>
+						<li><a href="#"
+							th:text="${#authentication.getPrincipal().getNome()}"></a></li>
+	
+						<li><form th:action="@{/logout}" method="POST" id="logout">
+								<a
+									onclick="document.getElementById('logout').submit(); return false;">Sair</a>
+							</form></li>
+					</ul>
+				</div>
+				
+				
+				
 				<!-- Dropdown Trigger -->
 				<div class="right">
 					<ul id="nav-mobile" class="side-nav">
