--- a/aplicacao/contest/src/main/resources/templates/fragments/footer.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/footer.html
@@ -3,13 +3,13 @@
 <head>
     
 </head>
-<body>
-    <div th:fragment="footer">
+<body>		
+	<div th:fragment="footer">
     	<footer class="page-footer purple darken-4">
-			<div class="footer-copyright">
-				<div class="container">
-					<a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido
-						por NPI - Núcleo de Práticas em Informática</a>
+			<div class="footer-copyright">				
+				<div class="container">				
+					<a href="http://www.npi.quixada.ufc.br" class="white-text">					
+					Desenvolvido por NPI - Núcleo de Práticas em Informática</a>
 				</div>
 			</div>
 		</footer>
