--- a/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
@@ -50,6 +50,20 @@
 	          </div>
           </div>
           
+          <!-- Inserção de dados de Co Autor
+           
+          <div id="coAutor" class="coAutor" >
+	          <div class="input-field col m5 s5">
+	            <input id="coAutor_nome" disabled="disabled"  type="text" />
+	            <label for="coAutor_nome">CoAutor</label>
+	          </div>
+	          <div class="input-field col m5 s5">
+	            <input id="coAutor_email" disabled="disabled" type="text" />
+	            <label for="coAutor_email" >Email CoAutor</label>
+	          </div>
+          </div>
+           -->
+          
           
           
           <div id="coautores" class="coautores">
