--- a/aplicacao/contest/src/main/resources/templates/dashboard.html
+++ b/aplicacao/contest/src/main/resources/templates/dashboard.html
@@ -9,118 +9,192 @@
 	<div th:include="fragments/header :: header"></div>
 	<div class="container">
 		<div class="row">
+
 			<h2 class="col s12">Dashboard</h2>
-		</div>
-		<div class="row">
-			<div class="col s12 m6">
-				<div class="card white">
-					<div class="card-content" th:switch="${not #lists.isEmpty(trabalhosQueReviso)}">
-						<h4>Como Revisor</h4>
-						<div th:if="${#lists.isEmpty(trabalhosQueReviso)}">
-							<b>Você não está revisando nenhum trabalho.</b>
-						</div>
-						<div th:if="${not #lists.isEmpty(trabalhosQueReviso)}">
-							<ul>
-								<li><a th:href="@{|/revisor/trabalho/${trabalhosQueReviso[0].trabalho.id}|}"
-									th:text="${trabalhosQueReviso[0].trabalho.titulo}"></a></li>
-								<li><a th:if="${trabalhosQueReviso.size()} > 1"
-									th:href="@{|/revisor/trabalho/${trabalhosQueReviso[1].trabalho.id}|}"
-									th:text="${trabalhosQueReviso[1].trabalho.titulo}"></a></li>
-								<li><a th:if="${trabalhosQueReviso.size()} > 2"
-									th:href="@{|/revisor/trabalho/${trabalhosQueReviso[2].trabalho.id}|}"
-									th:text="${trabalhosQueReviso[2].trabalho.titulo}"></a></li>
 
-							</ul>
+			<div class="row">
+
+				<div class="col s8 md10">
+					<div class="card white">
+						<div class="card-content">
+							<h5>Eventos Ativos</h5>
+
 						</div>
-					</div>
-					<div class="card-action">
-						<a th:href="@{/revisor/}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
-							mais</a>
 					</div>
 				</div>
+				<div class="col s4 md8">
+					<div class="col">
+						<div class="card white">
+							<div class="card-content"
+								th:switch="${not #lists.isEmpty(trabalhosQueReviso)}">
+								<h5>Como Revisor</h5>
+								<div th:if="${#lists.isEmpty(trabalhosQueReviso)}">
+									<b>Você não está revisando nenhum trabalho.</b>
+								</div>
+								<div th:if="${not #lists.isEmpty(trabalhosQueReviso)}">
+									<ul>
+										<li><a
+											th:href="@{|/revisor/trabalho/${trabalhosQueReviso[0].trabalho.id}|}"
+											th:text="${trabalhosQueReviso[0].trabalho.titulo}"></a></li>
+										<li><a th:if="${trabalhosQueReviso.size()} > 1"
+											th:href="@{|/revisor/trabalho/${trabalhosQueReviso[1].trabalho.id}|}"
+											th:text="${trabalhosQueReviso[1].trabalho.titulo}"></a></li>
+										<li><a th:if="${trabalhosQueReviso.size()} > 2"
+											th:href="@{|/revisor/trabalho/${trabalhosQueReviso[2].trabalho.id}|}"
+											th:text="${trabalhosQueReviso[2].trabalho.titulo}"></a></li>
 
-			</div>
-			<div class="col s12 m6">
-				<div class="card white">
-					<div class="card-content">
-						<h4>Como Organizador</h4>
-						<div th:if="${#lists.isEmpty(eventosQueOrganizo)}">
-							<b>Você não está organizando nenhum evento ativo.</b>
-						</div>
-						<div th:if="${not #lists.isEmpty(eventosQueOrganizo)}" >
-							<ul>
-							<li><a th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[0].evento.id}|}"
-									th:text="${eventosQueOrganizo[0].evento.nome}"></a></li>
-								<li><a th:if="${eventosQueOrganizo.size()} > 1"
-									th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[1].evento.id}|}"
-									th:text="${eventosQueOrganizo[1].evento.nome}"></a></li>
-								<li><a th:if="${eventosQueOrganizo.size()} > 2"
-									th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[2].evento.id}|}"
-									th:text="${eventosQueOrganizo[2].evento.nome}"></a></li>
-							</ul>
+									</ul>
+								</div>
+							</div>
+							<div class="card-action">
+								<a th:href="@{/revisor/}"
+									class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+									mais</a>
+							</div>
 						</div>
 					</div>
-					<div class="card-action">
-						<a th:href="@{/eventoOrganizador}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
-							mais</a>
-					</div>
-				</div>
-			</div>
-		</div>
 
-		<div class="col s12 m6">
-			<div class="card white">
-				<div class="card-content">
-					<h4>Como Autor</h4>
-					<div th:if="${#lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
-						<b>Você não está participando de nenhum evento ativo.</b>
+					<div class="col">
+						<div class="card white">
+							<div class="card-content">
+								<h5>Como Organizador</h5>
+								<div th:if="${#lists.isEmpty(eventosQueOrganizo)}">
+									<b>Você não está organizando nenhum evento ativo.</b>
+								</div>
+								<div th:if="${not #lists.isEmpty(eventosQueOrganizo)}">
+									<ul>
+										<li><a
+											th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[0].evento.id}|}"
+											th:text="${eventosQueOrganizo[0].evento.nome}"></a></li>
+										<li><a th:if="${eventosQueOrganizo.size()} > 1"
+											th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[1].evento.id}|}"
+											th:text="${eventosQueOrganizo[1].evento.nome}"></a></li>
+										<li><a th:if="${eventosQueOrganizo.size()} > 2"
+											th:href="@{|/eventoOrganizador/evento/${eventosQueOrganizo[2].evento.id}|}"
+											th:text="${eventosQueOrganizo[2].evento.nome}"></a></li>
+									</ul>
+								</div>
+							</div>
+							<div class="card-action">
+								<a th:href="@{/eventoOrganizador}"
+									class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+									mais</a>
+							</div>
+						</div>
 					</div>
-					<div class="card white" th:if="${not #lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
-						<div class="card-content" >
-									<div th:each="participacaoEvento : ${eventoTrabalhosMinhaAutoria}">
-									<div class="card horizontal">
-										<div class="card-stacked">
-											<div
-												th:include="fragments/evento_timeline::evento-timeline(evento=${participacaoEvento.evento})"></div>
-											<div class="card-action">
-												<a class="purple-text">Participando</a>
+
+					<div class="col">
+						<div class="card white">
+							<div class="card-content">
+								<h5>Como Autor</h5>
+								<div th:if="${#lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
+									<b>Você não está participando de nenhum evento ativo.</b>
+								</div>
+								<div class="card white"
+									th:if="${not #lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
+									<div class="card-content">
+										<div
+											th:each="participacaoEvento : ${eventoTrabalhosMinhaAutoria}">
+											<div class="card horizontal">
+												<div class="card-stacked">
+													<div
+														th:include="fragments/evento_timeline::evento-timeline(evento=${participacaoEvento.evento})"></div>
+													<div class="card-action">
+														<a class="purple-text">Participando</a>
+													</div>
+												</div>
+											</div>
+
+											<div th:attr="id='modal' + ${participacaoEvento.evento.id}"
+												class="modal">
+												<div class="modal-content">
+													<h4>Participar do Evento</h4>
+													<h5 th:text="${participacaoEvento.evento.nome}"></h5>
+													<p>Tem certeza que quer participar deste evento?</p>
+												</div>
+												<form th:action="@{/autor/participarEvento}" method="post">
+
+													<div class="modal-footer">
+														<input type="hidden" name="idEvento"
+															th:value="${participacaoEvento.evento.id}" />
+														<button type="submit"
+															class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
+														<a href="#"
+															class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
+													</div>
+												</form>
 											</div>
 										</div>
-									</div>
-
-									<div th:attr="id='modal' + ${participacaoEvento.evento.id}"
-										class="modal">
-										<div class="modal-content">
-											<h4>Participar do Evento</h4>
-											<h5 th:text="${participacaoEvento.evento.nome}"></h5>
-											<p>Tem certeza que quer participar deste evento?</p>
-										</div>
-										<form th:action="@{/autor/participarEvento}" method="post">
-
-											<div class="modal-footer">
-												<input type="hidden" name="idEvento"
-													th:value="${participacaoEvento.evento.id}" />
-												<button type="submit"
-													class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
-												<a href="#"
-													class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
-											</div>
-										</form>
 									</div>
 								</div>
 							</div>
+							<div class="card-action">
+								<a th:href="@{/autor}"
+									class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+									mais</a>
 							</div>
 						</div>
-						<div class="card-action">
-						<a th:href="@{/autor}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
-							mais</a>
+
 					</div>
+
+					<div class="col">
+						<div class="card white">
+							<div class="card-content">
+								<h5>Como Coautor</h5>
+								<div th:if="${#lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
+									<b>Você não é coautor de nenhum trabalho</b>
+								</div>
+								<div class="card white"
+									th:if="${not #lists.isEmpty(eventoTrabalhosMinhaAutoria)}">
+									<div class="card-content">
+										<div
+											th:each="participacaoEvento : ${eventoTrabalhosMinhaAutoria}">
+											<div class="card horizontal">
+												<div class="card-stacked">
+													<div
+														th:include="fragments/evento_timeline::evento-timeline(evento=${participacaoEvento.evento})"></div>
+													<div class="card-action">
+														<a class="purple-text">Participando</a>
+													</div>
+												</div>
+											</div>
+
+											<div th:attr="id='modal' + ${participacaoEvento.evento.id}"
+												class="modal">
+												<div class="modal-content">
+													<h4>Participar do Evento</h4>
+													<h5 th:text="${participacaoEvento.evento.nome}"></h5>
+													<p>Tem certeza que quer participar deste evento?</p>
+												</div>
+												<form th:action="@{/autor/participarEvento}" method="post">
+
+													<div class="modal-footer">
+														<input type="hidden" name="idEvento"
+															th:value="${participacaoEvento.evento.id}" />
+														<button type="submit"
+															class="modal-action modal-close waves-effect btn-flat">Confirmar</button>
+														<a href="#"
+															class="modal-action modal-close waves-effect btn-flat">Cancelar</a>
+													</div>
+												</form>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="card-action">
+								<a th:href="@{/autor}"
+									class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+									mais</a>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
+
+		</div>
+	</div>
 	<div th:include="fragments/footer :: footer"></div>
 	<script type="text/javascript" th:src="@{/js/timeline.main.js}"></script>
 	<script type="text/javascript"></script>
