Refatoração das funcionalidades de revisor!!

--- a/aplicacao/contest/src/main/resources/templates/dashboard.html
+++ b/aplicacao/contest/src/main/resources/templates/dashboard.html
@@ -34,8 +34,7 @@
 						</div>
 					</div>
 					<div class="card-action">
-						<a th:href="@{/revisor/}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+						<a  th:href="@{/revisor/}" class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
 							mais</a>
 					</div>
 				</div>
@@ -62,8 +61,7 @@
 						</div>
 					</div>
 					<div class="card-action">
-						<a th:href="@{/eventoOrganizador}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+						<a 	th:href="@{/eventoOrganizador}" class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
 							mais</a>
 					</div>
 				</div>
@@ -114,8 +112,7 @@
 							</div>
 						</div>
 						<div class="card-action">
-						<a th:href="@{/autor}"
-							class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
+						<a  th:href="@{/autor}"	class="btn white-text waves-effect waves-light confirmar modal-trigger">Ver
 							mais</a>
 					</div>
 					</div>
