--- a/aplicacao/contest/src/main/resources/templates/fragments/revisor_menu_navegacao.html
+++ b/aplicacao/contest/src/main/resources/templates/fragments/revisor_menu_navegacao.html
@@ -6,9 +6,8 @@
 	<body>
 		<div th:fragment="revisor_menu_navegacao">
 			<div class="row opcoes">
-			    <a th:href="@{/eventoOrganizador}">Meus Eventos</a>
-		        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
-		       	<a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
+			    <a th:href="@{/revisor/}">Meus Eventos</a>
+		        <a th:href="@{/revisor/ativos}">Eventos Ativos</a>		       	
 		       	<a class=" btn-large waves-effect waves-light purple right white-text"  onclick="window.history.back()" alt="VOLTAR" >
 	       			Voltar
 	       		</a>
