BUGFIX EnviarTrabalhoForm inserir obrigatoriedade do nome do trabalho.

--- a/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_enviar_trabalho_form.html
@@ -34,7 +34,7 @@
           
           <input type="hidden" th:value="${eventoId}" name="eventoId"/>
           <div class="input-field col m12 s12">
-            <input id="titulo_do_trabalho" type="text" th:field="*{titulo}"/>
+            <input id="titulo_do_trabalho" type="text" th:field="*{titulo}" required="required"/>
             <label for="titulo_do_trabalho">Titulo do Trabalho</label>
           </div>
           
