--- a/aplicacao/contest/src/main/resources/templates/dashboard.html
+++ b/aplicacao/contest/src/main/resources/templates/dashboard.html
@@ -133,14 +133,14 @@
 								<div th:if="${not #lists.isEmpty(trabalhosMinhaAutoria)}">
 									<ul>
 										<li><a
-											th:href="@{|/autor/file/${trabalhosMinhaAutoria[0].trabalho.id}|}"
-											th:text="${trabalhosMinhaAutoria[0].trabalho.titulo}"></a></li>
+											th:href="@{|/autor/file/${trabalhosMinhaAutoria[0].id}|}"
+											th:text="${trabalhosMinhaAutoria[0].titulo}"></a></li>
 										<li><a th:if="${trabalhosMinhaAutoria.size()} > 1"
-											th:href="@{|/autor/file/${trabalhosMinhaAutoria[1].trabalho.id}|}"
-											th:text="${trabalhosMinhaAutoria[1].trabalho.titulo}"></a></li>
+											th:href="@{|/autor/file/${trabalhosMinhaAutoria[1].id}|}"
+											th:text="${trabalhosMinhaAutoria[1].titulo}"></a></li>
 										<li><a th:if="${trabalhosMinhaAutoria.size()} > 2"
-											th:href="@{|/autor/file/${trabalhosMinhaAutoria[2].trabalho.id}|}"
-											th:text="${trabalhosMinhaAutoria[2].trabalho.titulo}"></a></li>
+											th:href="@{|/autor/file/${trabalhosMinhaAutoria[2].id}|}"
+											th:text="${trabalhosMinhaAutoria[2].titulo}"></a></li>
 									</ul>
 								</div>
 							</div>
